--- a/index.html
+++ b/index.html
@@ -7,17 +7,30 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
   <nav>
-    <div>
-        <a href="#">Shyaka Thierry</a>
+    <div class="nav_left">
+        <a href="">Shyaka Thierry</a>
     </div>
-    <div>
-
+    <div class="nav-right">
+<a href="">Projects</a>
+<a href="">Education</a>
+<a href="">Blog</a>
+<a href="dashboard.html">Dashboard</a>
+<a href="">Contacts</a>
     </div>
-  </nav>  
+  </nav> 
+  <main>
+<section id="hero" class="hero-section">
+    <div class="hero-content">
+    <h1>Shyaka Thierry</h1>
+    <p>Your friendly web developer & designer</p>
+    <img src=""
+    </div>
+</section>
+  </main> 
 </body>
 </html>
