This are my new updates of my Portifolio

--- a/dashboard.html
+++ b/dashboard.html
@@ -3,82 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <!-- Link to CSS -->
-  <link rel="stylesheet" href="styles.css" />
-  <style>
-
-  </style>
     <title>Document</title>
 </head>
 <body>
   <nav>
-    <div class="nav-left">
-        <a href="index.html">Shyaka Thierry</a>
+    <div>
+        <h2>Shyaka Thierry</h2>
     </div>
-    <div class="nav-left">
+    <div>
         <a href="index.html">Home</a>
     </div>
-  </nav>  
-  <main>
-    <section id="dashboard">
-        <h2>Blog Dashboard</h2>
-        <form id="postForm">
-            <input type="hidden" id="post-index" value="">
-            <label for="post-title">Title</label>
-            <input type="text" id="post-title" required>
-            <label for="post-date">Date</label>
-            <input type="date" id="post-date" required>
+  </nav>
+  <section>
+    <h1>Blog Dashboard</h1><br>
+    <form action="" method="post">
+        <label>Title</label><br>
+        <input type="text"><br><br>
+        <label>Date</label><br>
+        <input type="date"><br><br>
+        <label>Content</label><br>
+        <textarea wrap="soft"></textarea>
+        <br>
+        <button>Save Post</button>
+        <br>
+    </form>
+    <div>
+        <h3>Your Blog Post</h3>
 
-            <label for="post-content">Content</label>
-            <textarea id="post-content" rows="5" required>
-            </textarea>
-            <button type="submit">Save Post</button>
-        </form>
-
-        <h3>Your Blog Posts</h3>
-        <div id="postsList">
-
-        </div>
-    </section>
-  </main>
-  <script>
-    function getPosts(){
-        return JSON.parse(localStorage.getItem('blogPosts')) ||[];
-
-    }
-    function savePosts(posts){
-        localStorage.setItem('bogPosts', JSON.stringify(posts));
-    }
-    function savePosts(posts){
-        const postList = document.getElementById('postsList');
-        postsList.innerHTML = '';
-        const posts = getPosts();
-        posts.forEach((post, index) =>{
-            const postEl = document.createElement('div');
-            postEl.className = 'dashboard-post';
-            postEl.innerHTML =`
-            <h4>${post.title}</h4>
-            <small>${post.data}</small>
-            <p>${post.content.substring(0, 100)}...</p>
-            <button onclick="editPost(${index})">Edit</button>
-            <button onclick="deletePost(${index})">Delete</button>
-            `;
-            postsList.apendChild(postEl);
-
-        });
-    }
-    document.getElementById('postForm').addEventListener('submit', function(e){
-        e.preventDefault();
-        const title = document.getElementById('post-title').value.trim();
-        const date = document.getElementById('post-date').value;
-        const content = document.getElementById('post-content').value.trim();
-        let posts = getPosts();
-        const postIndex = document.getElemrntBy
-    })
-  </script>
+    </div>
+    <script>
+        
+    </script>
+  </section>
 </body>
 </html>
