my new updated version

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
         <h2>Education</h2><br><br>
         <h3>. SOS Technical School</h3><br><br>
         <h3>. Diploma Degree</h3><br><br>
-        <h3>. 2024 - 2025</h3>
+        <h3>. 2024 - 2025</h3><br><br>
+        <h3>. Certified by Andela as an advanced &nbsp;&nbsp;web developer</h3>
       </div>
       <div>
         <img src="Hero.png" class="Herro" alt="Educational Image">
